2006-08-31 Atsushi Enomoto <atsushi@ximian.com>

	* src/gerror.h,
	  src/gerror.c : added g_set_error().
	* src/gutf8.c :
	  g_utf8_to_utf16() and g_utf16_to_utf8() implementation.
	* src/glib.h : added all above, and some dependent bits.
	* src/Makefile.am : added gutf8.c.
	* TODO: removed above.
	* test/Makefile.am,
	  test/tests.h : added utf8 tests.
	* test/utf8.c : test for g_utf8_to_utf16 and g_utf16_to_utf8.
	  It still needs more tests e.g. for multibytes.

2006-08-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/gspawn.c: small touch-ups and make read/write EINTR-proof.

2006-08-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/file.c: remove useless test.

	* test/spawn.c: new g_spawn_async_with_pipes test.
	* src/glib.h: Modified file.
	* src/gspawn.c: implemented g_spawn_async_with_pipes. Needs fine tuning.

2006-08-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TODO: Modified file.
	* test/tests.h:
	* test/pattern.c:
	* test/dir.c:
	* test/Makefile.am:
	* src/Makefile.am:
	* src/glib.h:
	* src/gdir.c:
	* src/gfile.c: implemented g_dir_*, unix version.

2006-08-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/glib.h:
	* test/Makefile.am: Modified file.
	* test/tests.h:
	* src/Makefile.am: Modified file.
	* test/pattern.c:
	* src/gpattern.c: implemented the 3 pattern matching functions used.

	* test/ptrarray.c: fix the compare function to work with qsort.

	* test/file.c:
	* test/path.c:
	* src/gspawn.c:
	* src/gpath.c: made valgrind happy.

2006-08-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/file.c:
	* src/glib.h:
	* src/gfile.c:  implemented g_file_test. Changed the default mask to
	.XXXXXX. Add tests.

2006-08-26  Raja R Harinath  <rharinath@novell.com>

	* src/sort.frag.h (digit): Declare here based on externally
	provided typedef 'list_node'.
	(MAX_DIGITS): Use 'sizeof (list_node)'.
	* src/gslist.c (list_node): Declare instead of 'digit'.
	* src/glist.c: Likewise.
